updated value and database connection

--- a/project1.ipynb
+++ b/project1.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "5bca51e0-8e8c-4e70-a654-b97a35011b98",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
        "4         PayPal               Annually  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "fa5e951f-bee3-4b23-8674-0b9877d6b814",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "1a675836-9bbe-4d9c-8d95-10c935008b58",
    "metadata": {},
    "outputs": [
@@ -374,7 +374,7 @@
        "max             50.000000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "d7f83775-314d-4568-a6cd-7ba159eaebd2",
    "metadata": {},
    "outputs": [
@@ -720,7 +720,7 @@
        "max              50.000000            NaN                    NaN  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "02977b03-af15-4690-bb13-50fedf2dc221",
    "metadata": {},
    "outputs": [
@@ -759,7 +759,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "da048997-0aea-494b-99eb-d7d9ed169cef",
    "metadata": {},
    "outputs": [],
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "94b8a3b2-4e72-4253-9cdd-c817384d2ec2",
    "metadata": {},
    "outputs": [
@@ -808,7 +808,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "cb01700c-2210-4e20-9ba6-a0ea89b34404",
    "metadata": {},
    "outputs": [
@@ -1004,7 +1004,7 @@
        "4         PayPal               Annually  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1015,19 +1015,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "137de9ab-793a-40af-ba89-d2ccf4ee80a0",
    "metadata": {},
    "outputs": [],
    "source": [
     "df.columns = df.columns.str.lower()\n",
     "df.columns = df.columns.str.replace(' ', '_')\n",
-    "df.columns = df.columns.str"
+    "df = df.rename(columns={'purchase_amount_(usd)':'purchase_amount'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "3f793357-7e21-4e5f-9476-5116553e4c9a",
    "metadata": {},
    "outputs": [
@@ -1057,7 +1057,7 @@
        "      <th>gender</th>\n",
        "      <th>item_purchased</th>\n",
        "      <th>category</th>\n",
-       "      <th>purchase_amount_(usd)</th>\n",
+       "      <th>purchase_amount</th>\n",
        "      <th>location</th>\n",
        "      <th>size</th>\n",
        "      <th>color</th>\n",
@@ -1183,12 +1183,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   customer_id  age gender item_purchased  category  purchase_amount_(usd)  \\\n",
-       "0            1   55   Male         Blouse  Clothing                     53   \n",
-       "1            2   19   Male        Sweater  Clothing                     64   \n",
-       "2            3   50   Male          Jeans  Clothing                     73   \n",
-       "3            4   21   Male        Sandals  Footwear                     90   \n",
-       "4            5   45   Male         Blouse  Clothing                     49   \n",
+       "   customer_id  age gender item_purchased  category  purchase_amount  \\\n",
+       "0            1   55   Male         Blouse  Clothing               53   \n",
+       "1            2   19   Male        Sweater  Clothing               64   \n",
+       "2            3   50   Male          Jeans  Clothing               73   \n",
+       "3            4   21   Male        Sandals  Footwear               90   \n",
+       "4            5   45   Male         Blouse  Clothing               49   \n",
        "\n",
        "        location size      color  season  review_rating subscription_status  \\\n",
        "0       Kentucky    L       Gray  Winter            3.1                 Yes   \n",
@@ -1212,7 +1212,7 @@
        "4         PayPal               Annually  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "7014124c-e0f1-4c4a-8666-e8302e98c032",
    "metadata": {},
    "outputs": [
@@ -1231,14 +1231,14 @@
      "data": {
       "text/plain": [
        "Index(['customer_id', 'age', 'gender', 'item_purchased', 'category',\n",
-       "       'purchase_amount_(usd)', 'location', 'size', 'color', 'season',\n",
+       "       'purchase_amount', 'location', 'size', 'color', 'season',\n",
        "       'review_rating', 'subscription_status', 'shipping_type',\n",
        "       'discount_applied', 'promo_code_used', 'previous_purchases',\n",
        "       'payment_method', 'frequency_of_purchases'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1249,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "9ee60d28-d5f3-4133-9ab7-a2b86c968ba1",
    "metadata": {},
    "outputs": [],
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "9ca5baaf-f697-43a6-9bb9-fd41c3c6258e",
    "metadata": {},
    "outputs": [
@@ -1359,7 +1359,7 @@
        "9   57  Middle-aged"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1370,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "id": "86867bf0-4332-4eca-8977-1dba32c3c42a",
    "metadata": {},
    "outputs": [],
@@ -1390,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "id": "70e40296-d83a-4646-b870-035a9e154a75",
    "metadata": {},
    "outputs": [
@@ -1488,7 +1488,7 @@
        "9                       90              Quarterly"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1499,7 +1499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "id": "ec639b80-93eb-4382-b296-a0a348b4e86e",
    "metadata": {},
    "outputs": [
@@ -1597,7 +1597,7 @@
        "9              Yes             Yes"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1608,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "57608fc9-7f6a-412e-b7d3-f5990f6b3700",
    "metadata": {},
    "outputs": [
@@ -1618,7 +1618,7 @@
        "np.True_"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1629,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "id": "63970596-6c36-4795-a778-60f35c1162f1",
    "metadata": {},
    "outputs": [],
@@ -1639,7 +1639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "id": "1e0a9d76-6b46-4977-9fe9-4691defc17cb",
    "metadata": {},
    "outputs": [
@@ -1669,7 +1669,7 @@
        "      <th>gender</th>\n",
        "      <th>item_purchased</th>\n",
        "      <th>category</th>\n",
-       "      <th>purchase_amount_(usd)</th>\n",
+       "      <th>purchase_amount</th>\n",
        "      <th>location</th>\n",
        "      <th>size</th>\n",
        "      <th>color</th>\n",
@@ -1801,12 +1801,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   customer_id  age gender item_purchased  category  purchase_amount_(usd)  \\\n",
-       "0            1   55   Male         Blouse  Clothing                     53   \n",
-       "1            2   19   Male        Sweater  Clothing                     64   \n",
-       "2            3   50   Male          Jeans  Clothing                     73   \n",
-       "3            4   21   Male        Sandals  Footwear                     90   \n",
-       "4            5   45   Male         Blouse  Clothing                     49   \n",
+       "   customer_id  age gender item_purchased  category  purchase_amount  \\\n",
+       "0            1   55   Male         Blouse  Clothing               53   \n",
+       "1            2   19   Male        Sweater  Clothing               64   \n",
+       "2            3   50   Male          Jeans  Clothing               73   \n",
+       "3            4   21   Male        Sandals  Footwear               90   \n",
+       "4            5   45   Male         Blouse  Clothing               49   \n",
        "\n",
        "        location size      color  season  review_rating subscription_status  \\\n",
        "0       Kentucky    L       Gray  Winter            3.1                 Yes   \n",
@@ -1830,7 +1830,7 @@
        "4               Annually  Middle-aged                      365  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1841,8 +1841,254 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "717818e7-fedb-4a98-bf66-1e349bd66927",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pymysql in a:\\downloads\\anaconda\\lib\\site-packages (1.1.2)\n",
+      "Requirement already satisfied: sqlalchemy in a:\\downloads\\anaconda\\lib\\site-packages (2.0.39)\n",
+      "Requirement already satisfied: greenlet!=0.4.17 in a:\\downloads\\anaconda\\lib\\site-packages (from sqlalchemy) (3.1.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.6.0 in a:\\downloads\\anaconda\\lib\\site-packages (from sqlalchemy) (4.12.2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install pymysql sqlalchemy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "deff9578-f6d7-447b-8a82-b938a7c59f3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>customer_id</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>item_purchased</th>\n",
+       "      <th>category</th>\n",
+       "      <th>purchase_amount</th>\n",
+       "      <th>location</th>\n",
+       "      <th>size</th>\n",
+       "      <th>color</th>\n",
+       "      <th>season</th>\n",
+       "      <th>review_rating</th>\n",
+       "      <th>subscription_status</th>\n",
+       "      <th>shipping_type</th>\n",
+       "      <th>discount_applied</th>\n",
+       "      <th>previous_purchases</th>\n",
+       "      <th>payment_method</th>\n",
+       "      <th>frequency_of_purchases</th>\n",
+       "      <th>age_group</th>\n",
+       "      <th>purchase_frequency_days</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>55</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Blouse</td>\n",
+       "      <td>Clothing</td>\n",
+       "      <td>53</td>\n",
+       "      <td>Kentucky</td>\n",
+       "      <td>L</td>\n",
+       "      <td>Gray</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Express</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>14</td>\n",
+       "      <td>Venmo</td>\n",
+       "      <td>Fortnightly</td>\n",
+       "      <td>Middle-aged</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>19</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Sweater</td>\n",
+       "      <td>Clothing</td>\n",
+       "      <td>64</td>\n",
+       "      <td>Maine</td>\n",
+       "      <td>L</td>\n",
+       "      <td>Maroon</td>\n",
+       "      <td>Winter</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Express</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Cash</td>\n",
+       "      <td>Fortnightly</td>\n",
+       "      <td>Young Adult</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>50</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Jeans</td>\n",
+       "      <td>Clothing</td>\n",
+       "      <td>73</td>\n",
+       "      <td>Massachusetts</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Maroon</td>\n",
+       "      <td>Spring</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Free Shipping</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Credit Card</td>\n",
+       "      <td>Weekly</td>\n",
+       "      <td>Middle-aged</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Sandals</td>\n",
+       "      <td>Footwear</td>\n",
+       "      <td>90</td>\n",
+       "      <td>Rhode Island</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Maroon</td>\n",
+       "      <td>Spring</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Next Day Air</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>49</td>\n",
+       "      <td>PayPal</td>\n",
+       "      <td>Weekly</td>\n",
+       "      <td>Young Adult</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>Blouse</td>\n",
+       "      <td>Clothing</td>\n",
+       "      <td>49</td>\n",
+       "      <td>Oregon</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Turquoise</td>\n",
+       "      <td>Spring</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Free Shipping</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>31</td>\n",
+       "      <td>PayPal</td>\n",
+       "      <td>Annually</td>\n",
+       "      <td>Middle-aged</td>\n",
+       "      <td>365</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   customer_id  age gender item_purchased  category  purchase_amount  \\\n",
+       "0            1   55   Male         Blouse  Clothing               53   \n",
+       "1            2   19   Male        Sweater  Clothing               64   \n",
+       "2            3   50   Male          Jeans  Clothing               73   \n",
+       "3            4   21   Male        Sandals  Footwear               90   \n",
+       "4            5   45   Male         Blouse  Clothing               49   \n",
+       "\n",
+       "        location size      color  season  review_rating subscription_status  \\\n",
+       "0       Kentucky    L       Gray  Winter            3.1                 Yes   \n",
+       "1          Maine    L     Maroon  Winter            3.1                 Yes   \n",
+       "2  Massachusetts    S     Maroon  Spring            3.1                 Yes   \n",
+       "3   Rhode Island    M     Maroon  Spring            3.5                 Yes   \n",
+       "4         Oregon    M  Turquoise  Spring            2.7                 Yes   \n",
+       "\n",
+       "   shipping_type discount_applied  previous_purchases payment_method  \\\n",
+       "0        Express              Yes                  14          Venmo   \n",
+       "1        Express              Yes                   2           Cash   \n",
+       "2  Free Shipping              Yes                  23    Credit Card   \n",
+       "3   Next Day Air              Yes                  49         PayPal   \n",
+       "4  Free Shipping              Yes                  31         PayPal   \n",
+       "\n",
+       "  frequency_of_purchases    age_group  purchase_frequency_days  \n",
+       "0            Fortnightly  Middle-aged                       14  \n",
+       "1            Fortnightly  Young Adult                       14  \n",
+       "2                 Weekly  Middle-aged                        7  \n",
+       "3                 Weekly  Young Adult                        7  \n",
+       "4               Annually  Middle-aged                      365  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "from urllib.parse import quote_plus\n",
+    "\n",
+    "username = \"root\"\n",
+    "password = quote_plus(\"Suraj@123ks\")   # encode special characters\n",
+    "host = \"localhost\"\n",
+    "port = \"3306\"\n",
+    "database = \"mydatabase\"\n",
+    "\n",
+    "engine = create_engine(\n",
+    "    f\"mysql+pymysql://{username}:{password}@{host}:{port}/{database}\"\n",
+    ")\n",
+    "\n",
+    "df.to_sql(\"mytable\", engine, if_exists=\"replace\", index=False)\n",
+    "\n",
+    "pd.read_sql(\"SELECT * FROM mytable LIMIT 5;\", engine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ab9f26db-8166-4463-b121-1ab46bb2a9bf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b438ab8a-e22d-442f-ab0e-e4e1d42c5591",
    "metadata": {},
    "outputs": [],
    "source": []
